# improveit-dashboard

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  tox.ini
.datalad/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  update-dashboard.yml
.specify/memory/: constitution.md
READMEs/: DimitriPapadopoulos.md  yarikoptic.md
READMEs/DimitriPapadopoulos/: closed.md  draft.md  merged.md  open.md
READMEs/yarikoptic/: closed.md  draft.md  merged.md  open.md
Summaries/responsiveness/: hostile.md  insufficient_data.md  selective.md  unresponsive.md  welcoming.md
code/: LICENSE  README.md  config.yaml
code/Summaries/responsiveness/: hostile.md  insufficient_data.md  selective.md  unresponsive.md  welcoming.md
code/src/improveit_dashboard/: cli.py
code/src/improveit_dashboard/controllers/: __init__.py  analyzer.py  discovery.py  github_client.py
code/src/improveit_dashboard/models/: __init__.py  comment.py  config.py  pull_request.py  repository.py
code/src/improveit_dashboard/utils/: logging.py  markdown.py
code/src/improveit_dashboard/views/: dashboard.py  reports.py
code/tests/: __init__.py
code/tests/integration/: test_end_to_end.py  test_github_api.py
code/tests/unit/: __init__.py  test_analyzer.py  test_github_client.py  test_models.py  test_persistence.py  test_views.py
data/: .gitkeep  repositories.json
specs/001-improveit-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-improveit-dashboard/checklists/: requirements.md
specs/001-improveit-dashboard/contracts/: github-api-contract.md
src/improveit_dashboard/: __init__.py  __main__.py  cli.py
src/improveit_dashboard/controllers/: analyzer.py  github_client.py  persistence.py
src/improveit_dashboard/models/: comment.py  config.py  discovery_run.py  pull_request.py  repository.py
src/improveit_dashboard/utils/: __init__.py  rate_limit.py
src/improveit_dashboard/views/: __init__.py  dashboard.py  reports.py
tests/: conftest.py
tests/integration/: __init__.py  test_github_api.py
tests/unit/: test_analyzer.py  test_github_client.py  test_persistence.py  test_views.py
