[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "improveit-dashboard"
version = "0.1.0"
description = "Dashboard to track improveit tool PRs (codespell, shellcheck) across GitHub repositories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Yaroslav Halchenko", email = "debian@onerussian.com" },
]
keywords = ["github", "dashboard", "codespell", "shellcheck", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
improveit-dashboard = "improveit_dashboard.cli:main"

[project.urls]
Homepage = "https://github.com/yarikoptic/improveit-dashboard"
Repository = "https://github.com/yarikoptic/improveit-dashboard"
Issues = "https://github.com/yarikoptic/improveit-dashboard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/improveit_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ai_generated: marks tests as generated by AI assistants",
    "integration: marks tests that require live API access",
]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["improveit_dashboard"]

[tool.coverage.run]
source = ["src/improveit_dashboard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
